--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/maymeclayton/weather-app#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "request": "^2.88.2"
   }
