--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "memorystore": "^1.6.4",
     "mysql": "^2.18.1",
     "request": "^2.88.2"
   }
